# futureskit

./: .gitignore  CLAUDE.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: futures_design.md
examples/: basic_usage.py
futureskit/: __init__.py  continuous.py  contracts.py  conversion.py  exceptions.py  futures.py  notation.py  symbology.py
futureskit/datasources/: __init__.py  base.py  refinitiv.py  tradingview.py
tests/: __init__.py  test_cl.csv  test_continuous.py  test_continuous_notation.py  test_contracts.py  test_conversion.py  test_futures.py  test_notation.py  test_notation_extended.py  test_symbology.py
