[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "futureskit"
dynamic = ["version"]
description = "A Python library for parsing and working with futures contract symbols and notation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/futureskit"
Issues = "https://github.com/yourusername/futureskit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["futureskit*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']